Change css to avoid image stretching

--- a/ajax-giphy-party/app.css
+++ b/ajax-giphy-party/app.css
@@ -22,11 +22,12 @@ section {
 }
 
 .gif-container {
-    display: flex;           
-    flex-wrap: wrap;         
-    justify-content: center; 
-    margin-top: 20px;       
-    background-color: transparent;  
+    margin-top: 30px;
+    flex-wrap: wrap;
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    height: auto;
 }
 
 
